<resources>
    <string name="app_name">TVSeriesApp</string>
    <string name="str_airingtoday">Air Today</string>
    <string name="str_ontheair">On The Air</string>
    <string name="str_search">Search</string>
    <string name="str_favourite">Favourite</string>
    <string name="str_norating">No Rating</string>
    <string name="str_noreleasedate">No Release Date</string>
    <string name="tv_row_desc_pattern" translatable="false">%s\u0020\u0020&#8226;\u0020\u0020%s</string>
    <string name="error_message_pattern">Error: %s</string>
    <string name="runtime_pattern_single">%s hour and %s minutes</string>
    <string name="runtime_pattern_multiple">%s hours and %s minutes</string>
    <string name="str_nodata">No Data</string>
    <string name="visit_website_url_pattern" translatable="false"><![CDATA[<a href="%s">%s</a>]]></string>
    <string name="visit_website">Visit website</string>
    <string name="str_knownFor">Known For </string>
    <string name="str_biography">Biography</string>
    <string name="str_alsoKnownAs">Also Known As</string>
    <string name="str_invalidDate">InvalidDate</string>
    <string name="str_photos">PHOTOS</string>
    <string name="str_credit">CREDITS</string>
    <string name="str_cast">CAST</string>
    <string name="str_video">VIDEOS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>