<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_airingtoday"
        android:title="@string/str_airingtoday"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:icon="@drawable/ic_baseline_today_24"/>

    <item
        android:id="@+id/navigation_ontheair"
        android:title="@string/str_ontheair"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:icon="@drawable/ic_baseline_live_tv_24"/>

    <item
        android:id="@+id/navigation_search"
        android:title="@string/str_search"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:icon="@drawable/ic_baseline_search_24"/>

    <item
        android:id="@+id/navigation_favourite"
        android:title="@string/str_favourite"
        app:showAsAction="ifRoom"
        android:orderInCategory="4"
        android:icon="@drawable/ic_baseline_star_outline_24"/>

</menu>